Move dictionary to new file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="de_plural.js"></script>
+    <script src="dictionary.js"></script>
     <div id="main">
       <h1>Konjugationen und Plural</h1>
       Wort: <span class="original_word" id="word"></span><br>
